# ros2_rnea_control

./: .gitignore  README.md
src/my_sr_arm_rb/: CMakeLists.txt  package.xml  rviz.rviz
src/my_sr_arm_rb/config/: controllers.yaml
src/my_sr_arm_rb/launch/: gazebo.launch.py  simulation.launch.py
src/my_sr_arm_rb/meshes/: banh_phai.STL  banh_phu_1.STL  banh_phu_2.STL  banh_trai.STL  base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_sr_11.STL  link_sr_12.STL  link_sr_13.STL  link_sr_14.STL  link_sr_21.STL  link_sr_22.STL  link_sr_23.STL  link_sr_24.STL
src/my_sr_arm_rb/src/: virtual_constraint_controller.cpp
src/my_sr_arm_rb/urdf/: my_sr_arm_rb.csv  my_sr_arm_rb.urdf  test.urdf
src/my_sr_arm_rb/word/: my_world.world
src/rnea_control/: CMakeLists.txt  package.xml  rnea_controller_plugins.xml
src/rnea_control/config/: rnea_params.yaml  rneatmp.yaml
src/rnea_control/include/rnea_control/: rnea_controller.hpp  rnea_solver.hpp  trajectory_generator.hpp
src/rnea_control/src/: rnea_controller.cpp
