<?xml version="1.0"?>
<package format="3">
  <name>my_sr_arm_rb</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for my_sr_arm_rb.
    This package contains configuration data, 3D models and launch files
    for the my_sr_arm_rb robot.
  </description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime + build dependencies -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>

  <!-- ROS2 launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
