<?xml version="1.0"?>
<package format="3">
  <name>rnea_control</name>
  <version>0.0.1</version>
  <description>rnea Dynamics ROS 2 Control</description>
  <maintainer email="todo@todo.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <export>
    <controller_interface plugin="${prefix}/rnea_controller_plugins.xml" />
  </export>
</package>